--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon_io/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon_io/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon_io/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon_io/favicon-16x16.png">
     <link rel="stylesheet" href="css/portfolio.css">
     <title>Victoria Akpan</title>
 </head>
@@ -227,6 +227,11 @@
                                     Education
                                 </h2>
                             </div>
+                            <div class="no-certificate-toast">
+                                <div class="">
+                                    <p class="available-txt">Not available</p>
+                                </div>
+                            </div>
                             <div class="certificate-img-contain">
                                 <div class="certificate-img">
                                     <img class="w-100 view-certificate">
@@ -243,7 +248,7 @@
                                         <p class="edu-text">
                                             Start basic html and css skills.
                                         </p>
-                                        <img src="./assets/certificate/web responsive certificate.PNG"
+                                        <img src="./assets/certificate/tech101 certificate.jpg"
                                             class="w-100 certificate-img-tag" alt="web responsive certificate">
                                         <button type="button" class="certificate-btn blue-link">View
                                             Certificate</button>
