--- a/index.html
+++ b/index.html
@@ -40,23 +40,18 @@
                         <div class="navigation-contain">
                             <ul class="navigation-list">
                                 <li class="navigation__item">
-                                    <!-- <a href="#" class="navigation__link">About Natours</a> -->
                                     <a class="nav-link home-page active" href="#home-page">Home</a>
                                 </li>
                                 <li class="navigation__item">
-                                    <!-- <a href="#" class="navigation__link">Your benefit</a> -->
                                     <a class="nav-link about-page" href="#about-page">About Me</a>
                                 </li>
                                 <li class="navigation__item">
-                                    <!-- <a href="#" class="navigation__link">Popular tours</a> -->
                                     <a class="nav-link skills-page" href="#skills-page">Skills</a>
                                 </li>
                                 <li class="navigation__item">
-                                    <!-- <a href="#" class="navigation__link">Stories</a> -->
                                     <a class="nav-link project-page" href="#project-page">My projects</a>
                                 </li>
                                 <li class="navigation__item">
-                                    <!-- <a href="#" class="navigation__link">Book now</a> -->
                                     <a class="nav-link contact-page" href="#contact-page">Contact Me</a>
                                 </li>
                             </ul>
@@ -412,9 +407,9 @@
                                 <div class="project-grid-card">
                                     <div class="">
                                         <div class=" text-center">
-                                            <a href="https://github.com/veedahv" target="_blank"
+                                            <a href="./projects.html" target="_blank"
                                                 rel="noopener noreferrer" class="mx-auto blue-link">
-                                                Check out my Github profile
+                                                Check out more projects
                                             </a>
                                         </div>
                                     </div>
@@ -524,7 +519,7 @@
                         Icons from <a href="https://www.flaticon.com/" title="Flaticon">Flaticon</a>
                     </div>
                     <p class="text-center">
-                        &#169; <a class="brand" href="index.html">Vee<span class="logo-blue">dah</span></a> || 2020
+                        &#169; <a class="brand" href="index.html">Vee<span class="logo-blue">dah</span></a> || 2021
                     </p>
                 </div>
             </div>
