--- a/index.html
+++ b/index.html
@@ -407,8 +407,8 @@
                                 <div class="project-grid-card">
                                     <div class="">
                                         <div class=" text-center">
-                                            <a href="./projects.html" target="_blank"
-                                                rel="noopener noreferrer" class="mx-auto blue-link">
+                                            <a href="./projects.html" target="_blank" rel="noopener noreferrer"
+                                                class="mx-auto blue-link">
                                                 Check out more projects
                                             </a>
                                         </div>
@@ -529,6 +529,17 @@
     <script>
         AOS.init();
     </script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
+
+
     <script src="js/script.js"></script>
 </body>
 
