--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
                                         games, reading good books, experimenting with baking ingredients,
                                         and also spending time with friends and family.
                                     </p>
+                                    <a href="https://veedah.hashnode.dev/" target="_blank" rel="noopener noreferrer" class="blog-link">Visit my blog
+                                    <i class="fa fa-long-arrow-right" aria-hidden="true"></i>                                    
+                                    </a>
                                 </div>
                             </div>
                             <div class="">
