--- a/index.html
+++ b/index.html
@@ -207,8 +207,20 @@
                                 </div>
                                 <div class="skill-cards card">
                                     <div class="card-body">
+                                        <img src="./images/vue-js.png" alt="">
+                                        <h5 class="contact-text p-1">VueJS</h5>
+                                    </div>
+                                </div>
+                                <div class="skill-cards card">
+                                    <div class="card-body">
                                         <img src="./images/Bootstrap_logo.svg" alt="">
                                         <h5 class="contact-text p-1">Bootstrap</h5>
+                                    </div>
+                                </div>
+                                <div class="skill-cards card">
+                                    <div class="card-body">
+                                        <img src="./images/firebase.png" alt="">
+                                        <h5 class="contact-text p-1">FireBase</h5>
                                     </div>
                                 </div>
                                 <div class="skill-cards card">
@@ -219,16 +231,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="">
                             <div>
                                 <h2 class="headings">
                                     Education
                                 </h2>
                             </div>
                             <div class="no-certificate-toast">
-                                <div class="">
-                                    <p class="available-txt">Not available</p>
-                                </div>
                             </div>
                             <div class="certificate-img-contain">
                                 <div class="certificate-img">
@@ -239,13 +248,34 @@
                                 <div class="edu-card card">
                                     <div class="card-body">
                                         <div class="edu-head flex">
+                                            <h3 class="edu-title">WASSCE</h3>
+                                            <h4 class="edu-time">Sep 2015 - Jul 2017</h4>
+                                        </div>
+                                        <h5 class="edu-venue">TISS</h5>
+                                        <hr>
+                                        <ul class="edu-ul">
+                                            <li class="edu-list">
+                                                Passed my WASSCE with all distinctions on my certificate.
+                                            </li>
+                                        </ul>
+                                        <!-- <button type="button" class="certificate-btn blue-link" disabled>View
+                                            Certificate</button> -->
+                                    </div>
+                                </div>
+                                <div class="edu-card card">
+                                    <div class="card-body">
+                                        <div class="edu-head flex">
                                             <h3 class="edu-title">Tech 101</h3>
                                             <h4 class="edu-time">Mar 2020</h4>
                                         </div>
+                                        <h5 class="edu-venue">Roothub</h5>
                                         <hr>
-                                        <p class="edu-text">
-                                            Start basic html and css skills.
-                                        </p>
+                                        <ul class="edu-ul">
+                                            <li class="edu-list">
+                                                Built a simple skincare website using HTML and CSS.
+                                            </li>
+                                        </ul>
+                                        </ul>
                                         <img src="./assets/certificate/tech101 certificate.jpg"
                                             class="w-100 certificate-img-tag" alt="web responsive certificate">
                                         <button type="button" class="certificate-btn blue-link">View
@@ -255,13 +285,28 @@
                                 <div class="edu-card card">
                                     <div class="card-body">
                                         <div class="edu-head flex">
-                                            <h3 class="edu-title">FreeCodeCamp</h3>
+                                            <h3 class="edu-title">Responsive web designs</h3>
                                             <h4 class="edu-time">Sep 2020</h4>
                                         </div>
+                                        <h5 class="edu-venue">FreeCodeCamp</h5>
                                         <hr>
-                                        <p class="edu-text">
-                                            Responsive web designs
-                                        </p>
+                                        <ul class="edu-ul">
+                                            <li class="edu-list">
+                                                Built a tribute page.
+                                            </li>
+                                            <li class="edu-list">
+                                                Built a survey form.
+                                            </li>
+                                            <li class="edu-list">
+                                                Built a product landing page.
+                                            </li>
+                                            <li class="edu-list">
+                                                Built a Technical Documentation page.
+                                            </li>
+                                            <li class="edu-list">
+                                                Built a Personal Portfolio webpage.
+                                            </li>
+                                        </ul>
                                         <img src="./assets/certificate/web responsive certificate.PNG"
                                             class="w-100 certificate-img-tag" alt="web responsive certificate">
                                         <button type="button" class="certificate-btn blue-link">View
@@ -274,10 +319,19 @@
                                             <h3 class="edu-title">Web development</h3>
                                             <h4 class="edu-time">Aug - Sep 2020</h4>
                                         </div>
+                                        <h5 class="edu-venue">Roothub</h5>
                                         <hr>
-                                        <p class="edu-text">
-                                            Learnt front-end development at the roothub.
-                                        </p>
+                                        <ul class="edu-ul">
+                                            <li class="edu-list">
+                                                Created a shopping list app.
+                                            </li>
+                                            <li class="edu-list">
+                                                Created a weather app.
+                                            </li>
+                                            <li class="edu-list">
+                                                Created an e-commerce dashboard for an online store.
+                                            </li>
+                                        </ul>
                                         <img src="./assets/certificate/roothub-certificate.jpg"
                                             class="w-100 certificate-img-tag" alt="web responsive certificate">
                                         <button type="button" class="certificate-btn blue-link">View
@@ -287,37 +341,72 @@
                                 <div class="edu-card card">
                                     <div class="card-body">
                                         <div class="edu-head flex">
-                                            <h3 class="edu-title">TISS</h3>
-                                            <h4 class="edu-time">Sep 2015 - Jul 2017</h4>
-                                        </div>
-                                        <hr>
-                                        <p class="edu-text">
-                                            Completed high school
-                                        </p>
-                                        <img src="./assets/certificate/web responsive certificate.PNG"
-                                            class="w-100 certificate-img-tag" alt="web responsive certificate">
-                                        <button type="button" class="certificate-btn blue-link" disabled>View
-                                            Certificate</button>
-                                    </div>
-                                </div>
-                                <div class="edu-card card">
-                                    <div class="card-body">
-                                        <div class="edu-head flex">
-                                            <h3 class="edu-title">University of Uyo</h3>
+                                            <h3 class="edu-title">Computer Engineering</h3>
                                             <h4 class="edu-time">Sep 2017 - Till date</h4>
                                         </div>
+                                        <h5 class="edu-venue">University of Uyo</h5>
                                         <hr>
-                                        <p class="edu-text">
-                                            Studying for a B.Eng for Computer Engineering
-                                        </p>
+                                        <ul class="edu-ul">
+                                            <li class="edu-list">
+                                                Studying for a B.Eng for Computer Engineering
+                                            </li>
+                                        </ul>
                                         <img src="./assets/certificate/web responsive certificate.PNG"
                                             class="w-100 certificate-img-tag" alt="web responsive certificate">
-                                        <button type="button" class="certificate-btn blue-link" disabled>View
-                                            Certificate</button>
+                                        <!-- <button type="button" class="certificate-btn blue-link" disabled>View
+                                            Certificate</button> -->
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        <div class="">
+                            <div>
+                                <h2 class="headings">
+                                    Work Experience
+                                </h2>
+                            </div>
+                            <div class="grid edu-grid">
+                                <div class="edu-card card">
+                                    <div class="card-body">
+                                        <div class="edu-head flex">
+                                            <h3 class="edu-title">Front-End Devloper Intern</h3>
+                                            <h4 class="edu-time">December 2020 - till date</h4>
+                                        </div>
+                                        <h5 class="edu-venue">Ustacky</h5>
+                                        <hr>
+                                        <ul class="edu-ul">
+                                            <li class="edu-list">
+                                                Implemented an e-commerce website design integrated with Paystack test payment method.
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- <div class="">
+                            <div>
+                                <h2 class="headings">
+                                    Volunteer Experience
+                                </h2>
+                            </div>
+                            <div class="grid edu-grid">
+                                <div class="edu-card card">
+                                    <div class="card-body">
+                                        <div class="edu-head flex">
+                                            <h3 class="edu-title">Front-End Devloper</h3>
+                                            <h4 class="edu-time">Feb 2021</h4>
+                                        </div>
+                                        <h5 class="edu-venue">GiveCampMemphis</h5>
+                                        <hr>
+                                        <ul class="edu-ul">
+                                            <li class="edu-list">
+                                                I helped rebuild the mobile view of The Women Advocacy Center Site.
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
