--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
                                         <!-- <p>
                                             A site that tells you how clipboard works
                                         </p> -->
-                                        <p><b>Design: </b><a href="" class=""><u>Frontend mentor</u></a></p>
+                                        <p><b>Design: </b><a href="https://www.frontendmentor.io/" class=""><u>Frontend mentor</u></a></p>
                                         <h4>Technologies used:</h4>
                                         <ul class="technologies">
                                             <li>HTML</li>
@@ -79,7 +79,7 @@
                                         <!-- <p>
                                             A site that tells you how clipboard works
                                         </p> -->
-                                        <p><b>Design: </b><a href="" class=""><u>Frontend mentor</u></a></p>
+                                        <p><b>Design: </b><a href="https://www.frontendmentor.io/" class=""><u>Frontend mentor</u></a></p>
                                         <h4>Technologies used:</h4>
                                         <ul class="technologies">
                                             <li>HTML</li>
@@ -104,7 +104,7 @@
                                         <!-- <p>
                                             A site that tells you how clipboard works
                                         </p> -->
-                                        <p><b>Design: </b><a href="" class=""><u>Frontend mentor</u></a></p>
+                                        <p><b>Design: </b><a href="https://www.frontendmentor.io/" class=""><u>Frontend mentor</u></a></p>
                                         <h4>Technologies used:</h4>
                                         <ul class="technologies">
                                             <li>HTML</li>
@@ -129,7 +129,7 @@
                                         <!-- <p>
                                             A site that tells you how clipboard works
                                         </p> -->
-                                        <p><b>Design: </b><a href="" class=""><u>Frontend mentor</u></a></p>
+                                        <p><b>Design: </b><a href="" class=""><u>Figma link</u></a></p>
                                         <h4>Technologies used:</h4>
                                         <ul class="technologies">
                                             <li>HTML</li>
@@ -154,7 +154,7 @@
                                         <!-- <p>
                                             A site that tells you how clipboard works
                                         </p> -->
-                                        <p><b>Design: </b><a href="" class=""><u>Frontend mentor</u></a></p>
+                                        <p><b>Design:</b> Self inspired :)</p>
                                         <h4>Technologies used:</h4>
                                         <ul class="technologies">
                                             <li>HTML</li>
@@ -180,7 +180,7 @@
                                         <!-- <p>
                                             A site that tells you how clipboard works
                                         </p> -->
-                                        <p><b>Design: </b><a href="" class=""><u>Frontend mentor</u></a></p>
+                                        <p><b>Design:</b> Self inspired :)</p>
                                         <h4>Technologies used:</h4>
                                         <ul class="technologies">
                                             <li>HTML</li>
@@ -202,7 +202,7 @@
                                     <img src="./images/hotel-booking.jpg" class="card-img w-100" alt="...">
                                     <div class="card-body">
                                         <h3 class="card-title">Hotel Booking Site</h3>
-                                        <p><b>Design: </b><a href="" class=""><u>Figma link</u></a></p>
+                                        <p><b>Design: </b><a href="https://www.figma.com/file/zBV2CMID7rKMlb4n5G3PLf/Hotel-Booking-Freebie-(Copy)" class=""><u>Figma link</u></a></p>
                                         <h4>Technologies used:</h4>
                                         <ul class="technologies">
                                             <li>HTML</li>
