--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                                 <div class="edu-card card">
                                     <div class="card-body">
                                         <div class="edu-head flex">
-                                            <h3 class="edu-title">Front-End Devloper Intern</h3>
+                                            <h3 class="edu-title">Front-End Intern</h3>
                                             <h4 class="edu-time">December 2020 - till date</h4>
                                         </div>
                                         <h5 class="edu-venue">Ustacky</h5>
