--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                 </div>
                                 <div class="skill-cards card">
                                     <div class="card-body">
-                                        <img src="./images/javascript.svg" alt="">
+                                        <img src="./images/javascript.png" alt="">
                                         <h5 class="contact-text p-1">JavaScript</h5>
                                     </div>
                                 </div>
