--- a/projects.html
+++ b/projects.html
@@ -199,6 +199,31 @@
                                 </div>
                                 <div class="card" data-aos="zoom-in" data-aos-easing="ease-in-back"
                                 data-aos-offset="50">
+                                    <img src="./assets/projects/calculator.jpg" class="card-img w-100" alt="...">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Calculator app</h3>
+                                        <!-- <p>
+                                            A site that tells you how clipboard works
+                                        </p> -->
+                                        <p><b>Design:</b> Self inspired :)</p>
+                                        <h4>Technologies used:</h4>
+                                        <ul class="technologies">
+                                            <li>HTML</li>
+                                            <li>CSS</li>
+                                            <li>VueJs</li>
+                                        </ul>
+                                        <a href="https://simple-vue-calculator.netlify.app/" target="_blank"
+                                            rel="noopener noreferrer" class="btn">
+                                            Live Demo
+                                        </a>
+                                        <a href="https://github.com/veedahv/vue-calculator" target="_blank"
+                                        rel="noopener noreferrer" class="btn">
+                                        Repo Link
+                                        </a>
+                                    </div>
+                                </div>
+                                <!-- <div class="card" data-aos="zoom-in" data-aos-easing="ease-in-back"
+                                data-aos-offset="50">
                                     <img src="./images/hotel-booking.jpg" class="card-img w-100" alt="...">
                                     <div class="card-body">
                                         <h3 class="card-title">Hotel Booking Site</h3>
@@ -216,10 +241,10 @@
                                         rel="noopener noreferrer" class="btn"> Repo Link
                                         </a>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="card" data-aos="zoom-in" data-aos-easing="ease-in-back"
                                 data-aos-offset="50">
-                                    <img src="./images/budget-app.jpg" class="card-img w-100" alt="...">
+                                    <img src="./assets/projects/budget-app-img.jpg" class="card-img w-100" alt="...">
                                     <div class="card-body">
                                         <h3 class="card-title">Shopping List App</h3>
                                         <p><b>Design:</b> Self inspired :)</p>
