--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <header class="header w-100">
             <div class="">
                 <nav class="flex w-100">
-                    <a class="brand" href="index.html">Vee<span class="logo-blue">dah</span></a>
+                    <a class="brand" href="index.html">Vee<span class="logo-blue">dahv</span></a>
                     <div class="navigation">
                         <input type="checkbox" name="" class="navigation-checkbox" id="nav-toggle">
                         <label for="nav-toggle" class="navigation-btn">
@@ -258,8 +258,6 @@
                                                 Passed my WASSCE with all distinctions on my certificate.
                                             </li>
                                         </ul>
-                                        <!-- <button type="button" class="certificate-btn blue-link" disabled>View
-                                            Certificate</button> -->
                                     </div>
                                 </div>
                                 <div class="edu-card card">
@@ -383,7 +381,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="">
+                        <div class="">
                             <div>
                                 <h2 class="headings">
                                     Volunteer Experience
@@ -406,7 +404,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </section>
@@ -426,15 +424,26 @@
                                 </div>
                                 <div class="project-grid-card project-card">
                                     <div class="h-100">
-                                        <img src="./images/hotel-booking.jpg" class="h-100 w-100" alt="...">
+                                        <img src="./images/blog-app.jpg" class="h-100 w-100" alt="...">
+                                        <!-- <img src="./assets/projects/blog-app.jpg" class="h-100 w-100" alt="..."> -->
+                                        <!-- <img src="./images/hotel-booking.jpg" class="h-100 w-100" alt="..."> -->
                                         <div class="card-details w-100">
                                             <div class="w-100">
-                                                <h3 class="card-title">Hotel Booking Site</h3>
-                                                <a href="https://best-tour-site.netlify.app/" target="_blank"
+                                                <!-- <h3 class="card-title">Hotel Booking Site</h3> -->
+                                                <!-- <a href="https://best-tour-site.netlify.app/" target="_blank"
                                                     rel="noopener noreferrer" class="btn">
                                                     <i class="fa fa-link" aria-hidden="true"></i> Live Demo
+                                                </a> -->
+                                                <!-- <a href="https://github.com/veedahv/hotel-booking-bootstrap"
+                                                    target="_blank" rel="noopener noreferrer" class="btn">
+                                                    <i class="fa fa-link" aria-hidden="true"></i> Repo Link
+                                                </a> -->
+                                                <h3 class="card-title">Blog Site</h3>
+                                                <a href="https://veedahv-vue-blog.netlify.app/" target="_blank"
+                                                rel="noopener noreferrer" class="btn">
+                                                    <i class="fa fa-link" aria-hidden="true"></i> Live Demo
                                                 </a>
-                                                <a href="https://github.com/veedahv/hotel-booking-bootstrap"
+                                                <a href="https://github.com/veedahv/my-blog"
                                                     target="_blank" rel="noopener noreferrer" class="btn">
                                                     <i class="fa fa-link" aria-hidden="true"></i> Repo Link
                                                 </a>
@@ -611,7 +620,7 @@
                         Icons from <a href="https://www.flaticon.com/" title="Flaticon">Flaticon</a>
                     </div>
                     <p class="text-center">
-                        &#169; <a class="brand" href="index.html">Vee<span class="logo-blue">dah</span></a> || 2021
+                        &#169; <a class="brand" href="index.html">Vee<span class="logo-blue">dahv</span></a> || 2021
                     </p>
                 </div>
             </div>
