--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1.0">
+<meta name="monetization" content="$ilp.uphold.com/q8zFyz46FjDq">
     <meta name="description" content="front-end, Victoria Akpan, Victoria, Akpan, web development, Javasript">
+<meta name="author" content="Victoria Akpan">
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700;800&family=Vollkorn:wght@600;700;800;900&display=swap"
         rel="stylesheet">
